# microstructure_ranker

./: .gitignore  .pylintrc  README.MD  check_kek_file.py  pyproject.toml
src/analysis/: analysis.ipynb  analysis_final.ipynb  feature_enj.ipynb  hft_features.ipynb  main.ipynb  proto.ipynb
src/analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb  proto-checkpoint.ipynb
src/analysis/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/analysis/pumps/: analysis.ipynb
src/core/: collect_mode.py  columns.py  currency.py  currency_pair.py  data_type.py  exchange.py  feature_pipeline.py  feature_set.py  parser_enums.py  paths.py  progress.json  task_type.py  time_utils.py  utils.py
src/data_collection/core/: currency.py  time_utils.py
src/data_collection/datavision/: crawler.py  parser.py  run.py  settings.py
src/data_collection/notebooks/: prototyping.ipynb
src/feature_writer/: HFTFeatureWriter.py  feature_exprs.py  run.py  utils.py
src/feature_writer/HFT/: binance.py  feature_exprs.py  okx.py
src/feature_writer/Pumps/: binance.py  enums.py  utils.py
src/historic_md/: run.py  settings.py
src/historic_md/parsers/: settings.py
src/ml_base/: enums.py  features.py  metrics.py  sample.py  utils.py
src/preprocessing/: feature_pipeline.py  microstructure_pipeline.py  run.py  run_test.py  transform_to_parquet.py  uploader_to_hive.py
test/core/: test_time_utils.py
test/feature_writer/: test_write_sampled_price.py
test/preprocessing/: test_binance_spot_trades_to_hive.py  test_transform_to_parquet.py
(+92 files in other folders)
