[tool.poetry]
name = "microstructure-price-prediction"
version = "0.1.0"
description = ""
authors = ["Mikhail Mironov, Maxim Shibanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
pandas = "^2.2.3"
polars = "^1.9.0"
numpy = "<2.0"
requests = "^2.32.3"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pyarrow = "^18.0.0"
fastparquet = "^2024.5.0"
polario = "^0.3.1"
tqdm = "<4.40.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
memory-profiler = "^0.61.0"
catboost = "^1.2.7"
ipywidgets = "^8.1.5"
scikit-learn = "^1.6.0"
optuna = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
